fix for scrolling bar, overflow-y was set to scroll not auto

--- a/front-end/src/assets/content-view.scss
+++ b/front-end/src/assets/content-view.scss
@@ -75,7 +75,7 @@
         margin-bottom: 0;
         flex: 1;
         background-color: var(--content-colour);
-        overflow-y: scroll;
+        overflow-y: auto;
         border-radius: 0.5rem;
         padding: 1rem;
 
